Ultimos cambios en todas las paginas

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
-pagina:vivanuncios
-transaccion=renta
-inmueble=bodega
+pagina=vivanuncios
+transaccion=venta
+inmueble=terreno
 ubicacion=colima
-precioMin=10000
-precioMax=20000
+precioMin=1000
+precioMax=100000
