--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
-pagina=vivanuncios
-transaccion=venta
-inmueble=terreno
-ubicacion=colima
-precioMin=1000
-precioMax=100000
+pagina=inmuebles24
+transaccion=renta
+inmueble=casas
+ubicacion=jalisco
+precioMin=0
+precioMax=60000
