--- a/config.properties
+++ b/config.properties
@@ -2,5 +2,5 @@ pagina=inmuebles24
 transaccion=renta
 inmueble=bodega
 ubicacion=jalisco
-precioMin=50000
-precioMax=1000000
+precioMin=15000
+precioMax=25000
